# assisted-log-analyzer

./: DEVELOPMENT.md  README.md  analyze-logs  pyproject.toml
src/log_analyzer/: __init__.py  api_client.py  log_analyzer.py  main.py  signatures.py
src/log_analyzer/signatures/: __init__.py  advanced_analysis.py  base.py  basic_info.py  error_detection.py  networking.py  performance.py  platform_specific.py
