[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openshift-log-analyzer"
version = "1.0.0"
description = "Standalone tool for analyzing OpenShift Assisted Installer logs"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenShift Log Analyzer Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "nestedarchive>=0.2.4",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "colorlog>=6.7.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/openshift/assisted-installer-deployment"
Repository = "https://github.com/openshift/assisted-installer-deployment"
Issues = "https://github.com/openshift/assisted-installer-deployment/issues"

[project.scripts]
analyze-openshift-logs = "log_analyzer.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/log_analyzer"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
